remove name-hyphens from internal labels

--- a/css/wallpaper.css
+++ b/css/wallpaper.css
@@ -1,5 +1,5 @@
 /**
- * Wall-O-Matic - Wallpaper Styles
+ * Wallomatic - Wallpaper Styles
  *
  * @package wallomatic
  * @author Jefferson Real <me@jeffersonreal.com>
