--- a/css/widget.css
+++ b/css/widget.css
@@ -1,5 +1,5 @@
 /**
- * Wall-O-Matic - Widget Styles
+ * Wallomatic - Widget Styles
  *
  * @package wallomatic
  * @author Jefferson Real <me@jeffersonreal.com>
