--- a/css/widget.css
+++ b/css/widget.css
@@ -8,13 +8,13 @@
  * @link https://jeffersonreal.com
  */
 
-.wallOMatic {
+.wallomatic {
     width: 100%;
     max-width: 12em;
     margin: 1em auto;
 }
 
-    .wallOMatic_decotop {
+    .wallomatic_decotop {
         position: relative;
         left: calc(50% - 33.3%);
         box-sizing: initial;
@@ -26,7 +26,7 @@
         height: 0;
     }
 
-    .wallOMatic_case {
+    .wallomatic_case {
         gap: 12% 10%;
         display: grid;
         grid: 2fr 2fr 3fr / repeat(3, 1fr);
@@ -48,10 +48,10 @@
     }
 
     /* Grid Assignment */
-    .wallOMatic_header { grid-area: header; }
-    .wallOMatic_panel { grid-area: panel; }
+    .wallomatic_header { grid-area: header; }
+    .wallomatic_panel { grid-area: panel; }
 
-    .wallOMatic_header {
+    .wallomatic_header {
         display: flex;
         position: relative;
         align-items: center;
@@ -68,7 +68,7 @@
         overflow: hidden;
     }
 
-    .wallOMatic_bulb {
+    .wallomatic_bulb {
         position: absolute;
         top: 0em;
         animation: glow 4s linear 2s infinite;
@@ -93,14 +93,14 @@
         100% { box-shadow: 0.3em 0.3em 2em 3em #FFD50077; }
     }
 
-    .wallOMatic_name {
+    .wallomatic_name {
         margin: auto;
         color: #333;
         font-family: 'Six Caps', sans-serif;
         font-size: 188%;
     }
 
-    .wallOMatic_gauge {
+    .wallomatic_gauge {
         display: flex;
         position: relative;
         align-items: center;
@@ -117,23 +117,23 @@
     }
 
     /* Grid Assignment */
-    .wallOMatic_gauge:nth-child(2) { grid-area: gauge1; }
-    .wallOMatic_gauge:nth-child(3) { grid-area: gauge2; }
-    .wallOMatic_gauge:nth-child(4) { grid-area: gauge3; }
+    .wallomatic_gauge:nth-child(2) { grid-area: gauge1; }
+    .wallomatic_gauge:nth-child(3) { grid-area: gauge2; }
+    .wallomatic_gauge:nth-child(4) { grid-area: gauge3; }
 
-    .wallOMatic_okLabel {
+    .wallomatic_okLabel {
         margin: 105% auto 0 auto;
         color: #333;
         font-family: 'Six Caps', sans-serif;
         font-size: 120%;
     }
 
-    .wallOMatic_warnLabel {
+    .wallomatic_warnLabel {
         display: flex;
         position: absolute;
         align-items: center;
         justify-content: center;
-        animation: wallOMatic_warn 8s infinite;
+        animation: wallomatic_warn 8s infinite;
         box-shadow: inset -0.1em 0.2em 0.4em 0.1em #000e;
         border-radius: 50%;
         background: red;
@@ -144,7 +144,7 @@
         font-size: 120%;
 }
 
-    @keyframes wallOMatic_warn {
+    @keyframes wallomatic_warn {
         0%   { top: -100%; }
         40%  { top: -100%; }
         42%  { top:  0;    }
@@ -153,7 +153,7 @@
         100% { top: -100%; }
     }
 
-    .wallOMatic_needle {
+    .wallomatic_needle {
         position: absolute;
         bottom: 0;
         left: 1.25em;
@@ -164,10 +164,10 @@
         width: 0.1em;
     }
 
-    .wallOMatic_gauge:nth-child(3) span {animation: wallOMatic_needle 5s infinite; }
-    .wallOMatic_gauge:nth-child(4) span {animation: wallOMatic_needle 8s infinite; }
+    .wallomatic_gauge:nth-child(3) span {animation: wallomatic_needle 5s infinite; }
+    .wallomatic_gauge:nth-child(4) span {animation: wallomatic_needle 8s infinite; }
 
-    @keyframes wallOMatic_needle {
+    @keyframes wallomatic_needle {
         0%   {transform: rotatez(-20deg) translatex(-0.4em);}
         25%  {transform: rotatez(0deg) translatex(0em);}
         50%  {transform: rotatez(-30deg) translatex(-0.6em);}
@@ -176,7 +176,7 @@
         100%   {transform: rotatez(-20deg) translatex(-0.4em);}
     }
 
-    .wallOMatic_panel {
+    .wallomatic_panel {
         display: grid;
         grid: 25% 50% 25% / 15% 70% 15%;
         grid-template-areas:
@@ -194,7 +194,7 @@
         height: 100%;
     }
 
-    .wallOMatic_button {
+    .wallomatic_button {
         grid-area: button;
         transition: 0.2s;
         box-shadow: 0 0 0 0.15em #000d;
@@ -207,11 +207,11 @@
         height: 0;
     }
 
-    .wallOMatic_button:hover {
+    .wallomatic_button:hover {
         cursor: pointer;
     }
 
-    .wallOMatic_button:active {
+    .wallomatic_button:active {
         box-shadow: inset 0 0 1em 0.2em #000, 0 0 0.1em 0.15em #000d;
     }
 
