--- a/css/widget.css
+++ b/css/widget.css
@@ -2,10 +2,10 @@
  * Wallomatic - Widget Styles
  *
  * @package wallomatic
- * @author Jefferson Real <me@jeffersonreal.com>
+ * @author Jefferson Real <me@jeffersonreal.uk>
  * @copyright Copyright (c) 2021, Jefferson Real
  * @license GPL2+
- * @link https://jeffersonreal.com
+ * @link https://jeffersonreal.uk
  */
 
 .wallomatic {
